# NI-SystemLink-Migration

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  __init__.py  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  slmigrate.py  systemlinkmigrate.py  temp.py  test-requirements.txt  tox.ini
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: lint-and-run-unit-tests-action.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  python-app.yml  run-linter-and-unit-tests.yml  run_mongo_integration_tests.yml
basic_scripts/: README.md
basic_scripts/alarm_rules/: migrate-from-alarm-rules.ps1  migrate-to-alarm-rules.ps1  migrate_from_alarm_rules.py  migrate_to_alarm_rules.py
basic_scripts/file_ingestion/: migrate-from-fis.ps1  migrate-to-fis.ps1  migrate_from_fis.py  migrate_to_fis.py
basic_scripts/tags_and_opcua/: migrate_from_opcua_tags.py  migrate_to_opcua_tags.py
basic_scripts/test_monitor_data/: migrate-from-test-data.ps1  migrate-to-test-data.ps1  migrate_from_test_data.py  migrate_to_test_data.py
docs/: conf.py
manual_test/: README.md  manual_test_base.py  test_alarm.py  test_asset.py  test_asset_rule.py  test_document_manager.py  test_file.py  test_notification.py  test_repository.py  test_security.py  test_system_states.py  test_systems_management.py  test_systems_management_migrator.py  test_tag.py  test_tag_rule.py  test_test_monitor.py  test_testmonitor.py  test_user_data.py  test_workspace.py
manual_test/assets/: Data.tdms  helloweb_1.0.0.0_windows_x64.nipkg  sample_dashboard_content.json  test-package_1.0.0-0_x64.ipk
manual_test/utilities/: file_utilities.py  notification_utilities.py  user_utilities.py  workspace_utilities.py
nislmigrate/: __init__.py  argument_handler.py  constants.py  file_handler.py  file_migrator.py  logging_setup.py  migration_action.py  migration_error.py  migration_facilitator.py  migration_tool.py  migrator_factory.py  migrator_plugin.py  migrator_plugin_loader.py  mongo_handler.py  mongo_migrator.py  permission_checker.py  plugin_loader.py  service.py  service_migrator.py  systemlink_service_manager.py
nislmigrate/extensibility/: migrator_plugin.py  migrator_plugin_loader.py
nislmigrate/facades/: facade_factory.py  file_system_facade.py  mongo_configuration.py  mongo_facade.py  process_facade.py  system_link_service_manager_facade.py  systemlink_service_manager.py
slmigrate/: MigrationAction.py  ServiceMigrationSpecification.py  __init__.py  arghandler.py  argument_handler.py  constants.py  file_handler.py  filehandler.py  migration_action.py  migrationaction.py  mongo_handler.py  mongohandler.py  pluginhandler.py  service.py  servicemgrhandler.py  servicemigrator.py  systemlink_service_manager.py
test/: __init__.py  conftest.py  context.py  test_argument_handler.py  test_constants.py  test_file_system_facade.py  test_migration_facilitator.py  test_migration_tool.py  test_migrator_plugin_loader.py  test_mongo_facade.py  test_permission_checker.py  test_run_migration_tool.py  test_service_migrator.py  test_slmigrate.py  test_system_link_service_manager.py  test_utilities.py
(+58 files in other folders)
