[tool.poetry]
name = "nislmigrate"
version = "0.0.11"
description = "The tool for migrating SystemLink data."
authors = ["sedwards <shawn.edwards@ni.com>"]
readme="README.md"
documentation="https://operations.systemlink.io/"
classifiers=[
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.6.8"
argparse = "^1.4.0"
pytest = "^6.2.3"
pymongo = "^3.11.3"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
tox = "^3.23.0"

[tool.poetry.scripts]
nislmigrate = 'nislmigrate.entry:slmigrate'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length=100