[tool.poetry]
name = "nislmigrate"
version = "0.0.13"
description = "The tool for migrating SystemLink data."
authors = ["sedwards <shawn.edwards@ni.com>"]
readme="README.md"
documentation="https://github.com/ni/NI-SystemLink-Migration"
classifiers=[
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.6.8"
argparse = "^1.4.0"
pymongo = "^3.11.3"

[tool.poetry.dev-dependencies]
tox = "*"
pytest = "^6.2.3"
codecov = "*"
coverage = "*"
flake8 = "*"
autopep8 = "*"
pytest-cov = "*"
setuptools = "*"
twine = "*"
cli-test-helpers = "*"
pymongo = "*"
poetry = "*"

[tool.poetry.scripts]
nislmigrate = 'nislmigrate.migration_tool:run_migration_tool'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length=100